PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: External dependency XML updates
phodevi: Continued tweaking on the new system information view

Phoronix Test Suite 7.0.0 Milestone 3
7 February 2017

pts-core: Add winners-and-losers sub-command for providing some first/last place finish stats
pts-core: Don't pass files greater than ~50MB to the result parser as likely too big to parse and invalid data like lots of warnings/errors from test
pts-core: Restructured test result parser
pts-core: Dropping of some deprecated checks
pts-core: Add ArgumentsDescription to the results-parser schema for appending a string to the used arguments description string on test execution
pts-core: Add the result-scale to the test profile comparison_hash (NOTE: any external data stores making use of the comparison_hash should thus rebuild their hash indexes)
pts-core: Allow one test run to generate multiple result outputs (graphs, etc) from multiple result-definition entries
pts-core: Drop secondary_linked_results handling now that all tests can create multiple result outputs natively, use that code path
pts-core: Add debug-result-parser sub-command as a way to debug test profile result-parser defintions, just scan for old test log files and don't actually execute test
pts-core: Restore setting the OpenBenchmarking.org ID to the ReferenceID field in the result file when cloning from OpenBenchmarking.org
pts-core: Various console coloring improvements

Phoronix Test Suite 7.0.0 Milestone 2
23 January 2017

pts-core: Indicate HIB/LIB result proportion when dumping results as CSV
pts-core: Introduce new view of system software/hardware details on test run and system-info command
pts-core: Drop detailed-system-info sub-command now that system-info is more verbose
pts-core: Eliminate pts_test_downloads_nye_XmlReader
pts-core: Eliminate pts_parse_results_nye_XmlReader abstraction
pts-core: A lot of cleanups / reworking of XML parsing in various components