@@ -4,6 +4,7 @@ Phoronix Test Suite (Git)
 
 pts-core: External dependency XML updates
 phodevi: Continued tweaking on the new system information view
+pts_Graph: Continued tweaking of graph UI
 
 Phoronix Test Suite 7.0.0 Milestone 3
 7 February 2017
